--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,50 @@
 body{
     font-family: 'Poppins', sans-serif;;
     background-color: #F3F1FF;
+    margin: 0px;
+}
+/* nav style  */
+nav {
+    background-color: seagreen;
+    color: white;
+    padding: 10px 0px;
+    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+nav img{
+    background-color:seagreen;
+}
+nav a{
+    text-decoration: none;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    
+
+}
+
+.icon{
+    width: 40.42px;
+    height: 51px;
+    
+}
+.fa-lightbulb{
+    font-size: 40px;
+}
+.fa-lightbulb:hover{
+    color: rgb(255, 218, 6);
+
+    
+}
+.icon{
+    display: flex;
+    align-items: center;
+}
+.profile{
+    display: flex;
+    align-items: center;
 }
 main{
     display: flex;
@@ -130,35 +174,7 @@ hr{
     padding: 0px 5px;
     background-color: rgb(240, 181, 181);
 }
-nav {
-    background-color: seagreen;
-    color: white;
-    padding: 10px 0px;
-    
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-nav a{
-    text-decoration: none;
-    color: white;
-    padding-left: 10px;
-    padding-right: 10px;
-    
 
-}
-.icon img{
-    width: 40.42px;
-    height: 51px;
-}
-.icon{
-    display: flex;
-    align-items: center;
-}
-.profile{
-    display: flex;
-    align-items: center;
-}
 
 /* Media Queries */
 
